# AlgoContest

./: .gitignore  A.cpp  B.cpp  C.cpp  C.py  CMakeLists.txt  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  H.py  I.cpp  I2.cpp  J.py  K.cpp  L.cpp
.cache/clangd/index/: A.cpp.DE122EEB5ED52392.idx  B.cpp.4ECF37ED5C6294C1.idx  C.cpp.3184FC02ACBFD0A9.idx  D.cpp.18C996CA4D7477B6.idx  E.cpp.BD8372D62354E75B.idx  F.cpp.DF985A015743B410.idx  G.cpp.ADEE7AC39D1B05F8.idx  H.cpp.3E2B1A7C19B8BC39.idx  I.cpp.0C1A99808445B3FC.idx  I2.cpp.EDE1C187A6A0BEFE.idx  J.cpp.206F5FEEE94A0B68.idx  K.cpp.49FE78B998A26534.idx  L.cpp.C76A75AF08FEB165.idx
